--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,8 @@
     function initMap() {
       return new google.maps.Map($map, {
         center: { lat: 0, lng: 0 },
-        zoom: 3
+        zoom: 3,
+        styles: virusStyles
       });
     }
 
