--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
       return new google.maps.Map($map, {
         center: { lat: 0, lng: 0 },
         zoom: 3,
+        virusStyles
       });
     }
 
