--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
       return new google.maps.Map($map, {
         center: { lat: 0, lng: 0 },
         zoom: 3,
-        styles: virusStyles
+        //styles: virusStyles
       });
     }
 
